--- a/climate/src/main/resources/application.properties
+++ b/climate/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://mysli.oamk.fi:3306/opisk_t1casa00
 spring.datasource.username=t1casa00
 spring.datasource.password=SxHf5gywpGS7E7gP
-# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.open-in-view=false 
